# dotfiles

./: .chezmoiignore  .gitignore  SECRETS.md  dot_bashrc  dot_envrc  dot_gitconfig  dot_profile  dot_zshenv  dot_zshrc  readme.md  run_onchange_after_install-system-tuning.sh  run_onchange_after_mcp-sync.sh.tmpl  run_onchange_after_omarchy-bootstrap.sh.tmpl
dot_local/share/hyprwhspr-ai/: conftest.py  executable_setup.sh  pyproject.toml
dot_local/share/hyprwhspr-ai/docs/plans/: 2026-05-28-transcript-logging.md
dot_local/share/hyprwhspr-ai/docs/specs/: 2026-05-28-transcript-logging-design.md
dot_local/share/hyprwhspr-ai/src/: __init__.py  __main__.py  client.py  config.py  daemon.py  lmstudio.py  nllb.py  prompts.py  transcript_log.py  vocab.py  window.py
dot_local/share/hyprwhspr-ai/src/services/: chandra_parse.py  rewrite.py  surya.py  textgen.py  translate.py  vision.py
dot_local/share/hyprwhspr-ai/tests/: test_chandra_parse.py  test_prompts.py  test_rewrite_clean.py  test_rewrite_log.py  test_transcript_log.py  test_translate.py  test_vocab.py  test_window.py
dot_local/share/hyprwhspr-ai/tests/e2e/: executable_run.sh
dot_local/share/hyprwhspr-ai/tests/ocr-bench/: README.md  executable_generate.sh  executable_run.py
dot_local/share/hyprwhspr-ai/tests/ocr-bench/cases/: 01_simple_doc.html  01_simple_doc.md  02_complex_table.html  02_complex_table.md  03_two_column.html  03_two_column.md  04_code_heavy.html  04_code_heavy.md  05_non_latin.html  05_non_latin.md  06_math_special.html  06_math_special.md  07_chart_bar.html  07_chart_bar.md  08_receipt.html  (+13 more)
(+213 files in other folders)
