[project]
name = "hyprwhspr-ai"
version = "0.1.0"
description = "Coordinator daemon for hyprwhspr post-transcription rewrite, vision, and translation."
requires-python = ">=3.12"
dependencies = [
  # HTTP client to LM Studio. Async + connection pooling + HTTP/2.
  "httpx>=0.28",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-asyncio>=0.24",
]
# HTML-format Chandra OCR path only (the JSON/GGUF path needs neither).
# Imported lazily in src/services/chandra_parse.py.
ocr = [
  "beautifulsoup4>=4.12",
  # Official Chandra OCR library — provides chandra.output.parse_markdown.
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.uv]
# Run scripts from venv via `uv run`.
package = false
